# bili-summary-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-ghcr.yml
app/: config.toml.example  main.py  qwen.py
app/core/: constants.py  logging.py  router.py  schemas.py  settings.py  utils.py
app/mcp/: __init__.py  server.py
app/qwen/: __init__.py  adapter.py  auth.py  constants.py  helpers.py  router.py  schemas.py  session.py  upload.py
app/services/: __init__.py  summary.py  video.py
