[project]
name = "bili-summary-mcp"
version = "0.1.0"
description = "FastAPI service for Bilibili video ingest via yt-dlp"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "openai>=2.24.0",
    "oss2>=2.19.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]==0.35.0",
    "yt-dlp==2025.8.22",
]
